--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,12 @@
         @apply hover:bg-lime-400 transition-all duration-500 ease-out rounded
     }
 }
+
+@layer bg{
+    .bg{
+        height: 90vh;
+        background-image: url("/img/wardrobe.jpg");
+        background-size: 100%;
+        background-repeat: no-repeat;
+    }
+}
